[package]
name = "nvidia_cuda"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
anyhow = "1.0.100"
cudarc = { version = "0.17.3", features = ["std", "nvrtc", "cuda-13000", "driver"]}
nvtx = "1.3.0"
once_cell = "1.21.3"
scopeguard = "1.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
uuid = { version = "1.18.1", features = ["v4"] }
