[package]
name = "nvidia_cuda"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
anyhow = "1.0.100"
cudarc = { version = "0.17.3", features = ["std", "nvrtc", "cuda-13000", "driver"]}
nvtx = "1.3.0"
once_cell = "1.21.3"
prost = "0.14.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = "1.47.1"
tokio-stream = "0.1.17"
tonic = "0.14.2"
tonic-prost = "0.14.2"
uuid = { version = "1.18.1", features = ["v4"] }

[build-dependencies]
tonic-prost-build = "0.14.2"
